# querydata.io

./: .gitignore  .pylintrc  metadata.yml  pyproject.toml  vercel.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml
plugins/: last_refresh.py  redirects.py
src/data_company_tools/aws/shared/: __init__.py
src/data_company_tools/aws/whats_new/: full.py  partial.py
src/querydataio/: full.py  partial.py  test_utils.py
src/querydataio/aws/: __init__.py  full.py  partial.py
src/querydataio/aws/analyst_reports/: __init__.py
src/querydataio/aws/blog_posts/: __init__.py  categories.json
src/querydataio/aws/blogs/: __init__.py  full.py  partial.py
src/querydataio/aws/executive_insights/: __init__.py
src/querydataio/aws/media_coverage/: __init__.py
src/querydataio/aws/products/: __init__.py
src/querydataio/aws/security_bulletins/: __init__.py
src/querydataio/identity/: __init__.py  full.py
src/querydataio/shared/: __init__.py
templates/: _footer.html
tests/: test_utils.py
tests/aws/: test_full.py  test_partial.py
tests/aws/shared/: test_shared.py  test_shared.test_generate_urls.1.json
tests/fixtures/aws/: analyst_reports_total_hits_https___aws_amazon_com_api_dirs_items_search_item_locale_en_US_item_directoryId_analyst-reports_sort_by_item_additionalFields_datePublished_size_1.json  dbs_aws_blog_posts_sqlite3_SELECT___FROM_blog_posts_ORDER_BY_id.json  executive_insights_total_hits_https___aws_amazon_com_api_dirs_items_search_item_locale_en_US_item_directoryId_executive-insights_sort_by_item_additionalFields_sortDate_size_1.json  products_total_hits_https___aws_amazon_com_api_dirs_items_search_item_locale_en_US_item_directoryId_aws-products_sort_by_item_additionalFields_productCategory_size_1.json  security_bulletins_total_hits_https___aws_amazon_com_api_dirs_items_search_item_locale_en_US_item_directoryId_security-bulletins_sort_by_item_additionalFields_bulletinId_size_1.json  tests_dbs_aws_general_sqlite3_SELECT___FROM_analyst_reports_ORDER_BY_id.json  tests_dbs_aws_general_sqlite3_SELECT___FROM_executive_insights_ORDER_BY_id.json  tests_dbs_aws_general_sqlite3_SELECT___FROM_media_coverage_ORDER_BY_id.json  tests_dbs_aws_general_sqlite3_SELECT___FROM_products_ORDER_BY_id.json  tests_dbs_aws_general_sqlite3_SELECT___FROM_security_bulletins_ORDER_BY_id.json  tests_dbs_aws_general_sqlite3_SELECT___FROM_whitepapers_ORDER_BY_id.json  whitepapers_https___aws_amazon_com_api_dirs_items_search_item_locale_en_US_item_directoryId_whitepapers_sort_by_item_additionalFields_sortDate_size_2000_page_0_sort_order_desc.json  whitepapers_total_hits_https___aws_amazon_com_api_dirs_items_search_item_locale_en_US_item_directoryId_whitepapers_sort_by_item_additionalFields_sortDate_size_1.json
tests/identity/: test_full.py
(+16 files in other folders)
