[tool.poetry]
name = "querydataio"
version = "0.1.0"
description = ""
authors = ["Ryan Caught <rcaught@gmail.com>"]
readme = "README.md"
packages = [{ include = "querydataio", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
datasette = "^0.64.6"
datasette-atom = "^0.9"
datasette-vega = "^0.6.2"
datasette-updated = "^0.1"
result = "^0.16.1"
rustedpy-maybe = "^0.0.0"

[tool.poetry.group.dev.dependencies]
cloudflare = "^2.19.2"
duckdb = "^0.10.0"
sqlite-utils = "^3.35.2"
datasette-publish-vercel = "^0.14.2"
pandas = "^2.2.0"
pytest = "^8.1.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
ruff = "^0.3.4"
tenacity = "^8.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/__pycache__"]
